pancadao de frontend

--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -1,5 +1,5 @@
 {
-  "slogan": "Seu guia de bolso do Sul da Bahia | BR",
+  "slogan": "Seu guia de bolso do Sul da Bahia",
   "cities": "Cidades",
   "tags": "Tags",
   "filter": "Filtrar",
