--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,6 +1,7 @@
 {
   "slogan": "Your guide to the South of Bahia",
   "cities": "Cities",
+  "regions": "Regions",
   "tags": "Tags",
   "filter": "Filter",
 
