--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -1,6 +1,7 @@
 {
   "slogan": "Su guía del Sur de Bahia | BR",
   "cities": "Ciudades",
+  "regions": "Regiones",
   "tags": "Etiquetas",
   "filter": "Filtrar",
 
