--- a/src/i18n/pt.json
+++ b/src/i18n/pt.json
@@ -1,6 +1,7 @@
 {
   "slogan": "Seu guia de bolso do Sul da Bahia",
   "cities": "Cidades",
+  "regions": "Regiões",
   "tags": "Tags",
   "filter": "Filtrar",
 
